<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="86dp"
            android:text="@string/aplikasi_iot"
            android:textColor="#1A1919"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monitoring"
            android:layout_marginTop="60dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="#1A1919"
            android:textSize="20sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgTemp"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/hot_temperature"/>

                <TextView
                    android:id="@+id/titleSuhu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suhu"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@id/imgTemp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="8dp">
                </TextView>

                <TextView
                    android:id="@+id/tvTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titleSuhu"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/imgTemp"
                    android:text="@string/derajat"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgKelembaban"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/humidity" />

                <TextView
                    android:id="@+id/titleKelembaban"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelembaban"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@id/imgKelembaban"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="8dp">
                </TextView>

                <TextView
                    android:id="@+id/tvHum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titleKelembaban"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/imgKelembaban"
                    android:text="@string/derajat"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kontrol"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="#1A1919"
            android:textSize="20sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgLamp"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/light_off" />

                <TextView
                    android:id="@+id/titleLamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kontrol"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@id/imgLamp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="8dp">
                </TextView>

                <TextView
                    android:id="@+id/tvLamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titleLamp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/imgLamp"
                    android:text="@string/off"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/swLamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imgLamp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="18dp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>